version/0.17/_sources/examples/legacy_pyaedt_integration/09_Configuration.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "examples\legacy_pyaedt_integration\09_Configuration.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_examples_legacy_pyaedt_integration_09_Configuration.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_examples_legacy_pyaedt_integration_09_Configuration.py:


EDB: Pin to Pin project
-----------------------
This example shows how you can create a project using a BOM file and configuration files.
run anlasyis and get results.

.. GENERATED FROM PYTHON SOURCE LINES 32-36

Perform required imports
~~~~~~~~~~~~~~~~~~~~~~~~
Perform required imports. Importing the ``Hfss3dlayout`` object initializes it
on version 2023 R2.

.. GENERATED FROM PYTHON SOURCE LINES 36-45

.. code-block:: Python


    import os

    from pyaedt import Hfss3dLayout

    import pyedb
    from pyedb.generic.general_methods import generate_unique_folder_name
    from pyedb.misc.downloads import download_file








.. GENERATED FROM PYTHON SOURCE LINES 46-49

Set non-graphical mode
~~~~~~~~~~~~~~~~~~~~~~
Set non-graphical mode. The default is ``False``.

.. GENERATED FROM PYTHON SOURCE LINES 49-52

.. code-block:: Python


    non_graphical = False








.. GENERATED FROM PYTHON SOURCE LINES 53-56

Download file
~~~~~~~~~~~~~
Download the AEDB file and copy it in the temporary folder.

.. GENERATED FROM PYTHON SOURCE LINES 56-62

.. code-block:: Python



    project_path = generate_unique_folder_name()
    target_aedb = download_file("edb/ANSYS-HSD_V1.aedb", destination=project_path)
    print("Project folder will be", target_aedb)





.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    Project folder will be C:\Users\ansys\AppData\Local\Temp\pyedb_prj_2RJ\edb/ANSYS-HSD_V1.aedb




.. GENERATED FROM PYTHON SOURCE LINES 63-66

Launch EDB
~~~~~~~~~~
Launch the :class:`pyedb.Edb` class, using EDB 2023 R2 and SI units.

.. GENERATED FROM PYTHON SOURCE LINES 66-68

.. code-block:: Python


    edbapp = pyedb.Edb(target_aedb, edbversion="2024.1")


.. rst-class:: sphx-glr-script-out

.. code-block:: pytb

    Traceback (most recent call last):
      File "C:\actions-runner\_work\pyedb\pyedb\examples\legacy_pyaedt_integration\09_Configuration.py", line 67, in <module>
        edbapp = pyedb.Edb(target_aedb, edbversion="2024.1")
      File "C:\actions-runner\_work\pyedb\pyedb\.venv\lib\site-packages\pyedb\generic\design_types.py", line 108, in Edb
        from pyedb.dotnet.edb import Edb as app
      File "C:\actions-runner\_work\pyedb\pyedb\.venv\lib\site-packages\pyedb\dotnet\edb.py", line 115, in <module>
        from pyedb.workflow import Workflow
      File "C:\actions-runner\_work\pyedb\pyedb\.venv\lib\site-packages\pyedb\workflow.py", line 4, in <module>
        import pandas as pd
    ModuleNotFoundError: No module named 'pandas'




.. GENERATED FROM PYTHON SOURCE LINES 69-103

Import Definitions
~~~~~~~~~~~~~~~~~~
A definitions file is a json containing, for each part name the model associated.
Model can be RLC, Sparameter or Spice.
Once imported the definition is applied to the board.
In this example the json file is stored for convenience in aedb folder and has the following format:
{
    "SParameterModel": {
        "GRM32_DC0V_25degC_series": "./GRM32_DC0V_25degC_series.s2p"
    },
    "SPICEModel": {
        "GRM32_DC0V_25degC": "./GRM32_DC0V_25degC.mod"
    },
    "Definitions": {
        "CAPC1005X05N": {
            "Component_type": "Capacitor",
            "Model_type": "RLC",
            "Res": 1,
            "Ind": 2,
            "Cap": 3,
            "Is_parallel": false
        },
        "'CAPC3216X180X55ML20T25": {
            "Component_type": "Capacitor",
            "Model_type": "SParameterModel",
            "Model_name": "GRM32_DC0V_25degC_series"
        },
        "'CAPC3216X180X20ML20": {
            "Component_type": "Capacitor",
            "Model_type": "SPICEModel",
            "Model_name": "GRM32_DC0V_25degC"
        }
    }
}

.. GENERATED FROM PYTHON SOURCE LINES 103-106

.. code-block:: Python


    edbapp.components.import_definition(os.path.join(target_aedb, "1_comp_definition.json"))


.. GENERATED FROM PYTHON SOURCE LINES 107-119

Import BOM
~~~~~~~~~~
This step imports a BOM file in CSV format. The BOM contains the
reference designator, part name, component type, and default value.
Components not in the BOM are deactivated.
In this example the csv file is stored for convenience in aedb folder.

+------------+-----------------------+-----------+------------+
| RefDes     | Part name             | Type      | Value      |
+============+=======================+===========+============+
| C380       | CAPC1005X55X25LL05T10 | Capacitor | 11nF       |
+------------+-----------------------+-----------+------------+

.. GENERATED FROM PYTHON SOURCE LINES 119-126

.. code-block:: Python



    edbapp.components.import_bom(
        os.path.join(target_aedb, "0_bom.csv"), refdes_col=0, part_name_col=1, comp_type_col=2, value_col=3
    )



.. GENERATED FROM PYTHON SOURCE LINES 127-130

Check Component Values
~~~~~~~~~~~~~~~~~~~~~~
Component property allows to access all components instances and their property with getters and setters.

.. GENERATED FROM PYTHON SOURCE LINES 130-135

.. code-block:: Python


    comp = edbapp.components["C1"]
    comp.model_type, comp.value



.. GENERATED FROM PYTHON SOURCE LINES 136-139

Check Component Definition
~~~~~~~~~~~~~~~~~~~~~~~~~~
When an s-parameter model is associated to a component it will be available in nport_comp_definition property.

.. GENERATED FROM PYTHON SOURCE LINES 139-142

.. code-block:: Python


    edbapp.components.nport_comp_definition


.. GENERATED FROM PYTHON SOURCE LINES 143-145

Save Edb
~~~~~~~~

.. GENERATED FROM PYTHON SOURCE LINES 145-147

.. code-block:: Python

    edbapp.save_edb()


.. GENERATED FROM PYTHON SOURCE LINES 148-155

Configure Setup
~~~~~~~~~~~~~~~
This step allows to define the project. It includes:
 - Definition of nets to be included into the cutout,
 - Cutout details,
 - Components on which to create the ports,
 - Simulation settings.

.. GENERATED FROM PYTHON SOURCE LINES 155-176

.. code-block:: Python


    sim_setup = edbapp.new_simulation_configuration()
    sim_setup.solver_type = sim_setup.SOLVER_TYPE.SiwaveSYZ
    sim_setup.batch_solve_settings.cutout_subdesign_expansion = 0.003
    sim_setup.batch_solve_settings.do_cutout_subdesign = True
    sim_setup.batch_solve_settings.use_pyaedt_cutout = True
    sim_setup.ac_settings.max_arc_points = 6
    sim_setup.ac_settings.max_num_passes = 5

    sim_setup.batch_solve_settings.signal_nets = [
        "PCIe_Gen4_TX2_CAP_P",
        "PCIe_Gen4_TX2_CAP_N",
        "PCIe_Gen4_TX2_P",
        "PCIe_Gen4_TX2_N",
    ]
    sim_setup.batch_solve_settings.components = ["U1", "X1"]
    sim_setup.batch_solve_settings.power_nets = ["GND", "GND_DP"]
    sim_setup.ac_settings.start_freq = "100Hz"
    sim_setup.ac_settings.stop_freq = "6GHz"
    sim_setup.ac_settings.step_freq = "10MHz"


.. GENERATED FROM PYTHON SOURCE LINES 177-180

Run Setup
~~~~~~~~~
This step allows to create the cutout and apply all settings.

.. GENERATED FROM PYTHON SOURCE LINES 180-184

.. code-block:: Python


    sim_setup.export_json(os.path.join(project_path, "configuration.json"))
    edbapp.build_simulation_project(sim_setup)


.. GENERATED FROM PYTHON SOURCE LINES 185-188

Plot Cutout
~~~~~~~~~~~
Plot cutout once finished.

.. GENERATED FROM PYTHON SOURCE LINES 188-191

.. code-block:: Python


    edbapp.nets.plot(None, None)


.. GENERATED FROM PYTHON SOURCE LINES 192-195

Save and Close EDB
~~~~~~~~~~~~~~~~~~
Edb will be saved and closed in order to be opened by Hfss 3D Layout and solved.

.. GENERATED FROM PYTHON SOURCE LINES 195-199

.. code-block:: Python


    edbapp.save_edb()
    edbapp.close_edb()


.. GENERATED FROM PYTHON SOURCE LINES 200-203

Open Aedt
~~~~~~~~~
Project folder aedb will be opened in AEDT Hfss3DLayout and loaded.

.. GENERATED FROM PYTHON SOURCE LINES 203-207

.. code-block:: Python

    h3d = Hfss3dLayout(
        specified_version="2024.1", projectname=target_aedb, non_graphical=non_graphical, new_desktop_session=True
    )


.. GENERATED FROM PYTHON SOURCE LINES 208-211

Analyze
~~~~~~~
Project will be solved.

.. GENERATED FROM PYTHON SOURCE LINES 211-213

.. code-block:: Python

    h3d.analyze()


.. GENERATED FROM PYTHON SOURCE LINES 214-217

Get Results
~~~~~~~~~~~
S Parameter data will be loaded at the end of simulation.

.. GENERATED FROM PYTHON SOURCE LINES 217-219

.. code-block:: Python

    solutions = h3d.post.get_solution_data()


.. GENERATED FROM PYTHON SOURCE LINES 220-223

Plot Results
~~~~~~~~~~~~
Plot S Parameter data.

.. GENERATED FROM PYTHON SOURCE LINES 223-225

.. code-block:: Python

    solutions.plot(solutions.expressions, "db20")


.. GENERATED FROM PYTHON SOURCE LINES 226-229

Save and Close AEDT
~~~~~~~~~~~~~~~~~~~
Hfss3dLayout is saved and closed.

.. GENERATED FROM PYTHON SOURCE LINES 229-231

.. code-block:: Python

    h3d.save_project()
    h3d.release_desktop()


.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (0 minutes 2.266 seconds)


.. _sphx_glr_download_examples_legacy_pyaedt_integration_09_Configuration.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: 09_Configuration.ipynb <09_Configuration.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: 09_Configuration.py <09_Configuration.py>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
